# pylabrecorder

./: .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: bot.yaml  ci.yaml  publish.yaml  pytest.yaml
src/pylabrecorder/: __init__.py  _recorder.py
src/pylabrecorder/_commands/: main.py  sys_info.py
src/pylabrecorder/utils/: __init__.py  config.py  logs.py
tests/: conftest.py  test_recorder.py
tests/_commands/: test_main.py  test_sys_info.py
tests/utils/: test_checks.py  test_config.py  test_logs.py
