[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0', 'setuptools_scm>=8']

[dependency-groups]
ide = [
  'ipykernel',
  'ipympl',
  'ipython',
]
style = [
  'bibclean',
  'codespell[toml]>=2.2.4',
  'pre-commit',
  'ruff>=0.6.0',
  'toml-sort',
  'yamllint',
]
test = [
  'mne',
  'mne-lsl>=1.13.2',
  'pytest-cov',
  'pytest-randomly',
  'pytest-timeout',
  'pytest>=8.0',
  'pyxdf>=1.17.4',
]

[project]
authors = [
  {email = 'mathieu.scheltienne@gmail.com', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
]
dependencies = [
  'click',
  'numpy>=1.23,<3',
  'packaging',
  'psutil',
]
description = 'A python package bundling LabRecorder and liblsl, statically linked, to control LabRecorder from Python.'
dynamic = ["version"]
keywords = [
  'labrecorder',
  'lsl',
  'python',
]
license = "MIT"
license-files = ["LICENSE"]
maintainers = [
  {email = 'mathieu.scheltienne@gmail.com', name = 'Mathieu Scheltienne'},
]
name = 'pylabrecorder'
readme = 'README.md'
requires-python = '>=3.11'

[project.scripts]
pylabrecorder = 'pylabrecorder._commands.main:run'

[project.urls]
source = 'https://github.com/mscheltienne/pylabrecorder'
tracker = 'https://github.com/mscheltienne/pylabrecorder/issues'

[tool.cibuildwheel]
archs = "native"
build = ["cp311-*", "cp314t-*"]  # abi3 wheel + free-threaded
build-frontend = "build[uv]"
skip = ["*-musllinux*", "pp*"]

[tool.cibuildwheel.linux]
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.macos]
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11"

[[tool.cibuildwheel.overrides]]
repair-wheel-command = "pipx run abi3audit --strict --report {wheel}"
select = "cp311-*"  # abi3 audit only for abi3 wheels, not free-threaded
inherit.repair-wheel-command = "append"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = [
  "delvewheel repair -w {dest_dir} {wheel}",
]

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache,.venv'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/pylabrecorder/_version.py',
  '**/pylabrecorder/utils/_fixes.py',
]

[tool.pytest.ini_options]
addopts = ['--color=yes', '--cov-report=', '--durations=20', '--junit-xml=junit-results.xml', '--strict-config', '--tb=short', '-ra', '-v']
filterwarnings = [
  'error',
]
junit_family = 'xunit2'
minversion = '8.0'

[tool.ruff]
extend-exclude = []
line-length = 88

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'C4', 'D', 'E', 'F', 'G', 'I', 'LOG', 'NPY', 'PERF', 'PIE', 'PT', 'T20', 'TID', 'UP', 'W']

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
'*' = [
  'B904',  # 'Within an except clause, raise exceptions with raise ... from ...'
  'D100',  # 'Missing docstring in public module'
  'D104',  # 'Missing docstring in public package'
  'D107',  # 'Missing docstring in __init__'
]
'__init__.py' = ['F401']
'tutorials/*' = ['D205', 'D400', 'T201']

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"pylabrecorder.lib" = ["*"]

[tool.setuptools.packages.find]
include = ['pylabrecorder*']
where = ['src']

[tool.setuptools_scm]
version_file = "src/pylabrecorder/_version.py"
version_scheme = "release-branch-semver"

[tool.tomlsort]
all = true
ignore_case = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true

[tool.uv]
default-groups = "all"
